[tool.poetry]
name = "repl-nix-geokorea"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_geokorea"}]

[tool.poetry.dependencies]
python = "^3.10"
pywebview = "^5.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
